implementación de búsqueda con consumo de API y manejo de estado

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 
-
-
-VITE_GIPHY_APY_KEY=https://api.giphy.com/v1/gifs/search;
+# https://developers.giphy.com/explorer/
+VITE_GIPHY_API_KEY=LgWpch4F4kClKpVUAaM5JGs3BvKhOJ5X
